bookinfo-mysql-ddbb/ossm/bookinfo-custom/vs-ratings-egress-custom.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql-egress
  namespace: bookinfo
spec:
  exportTo:
  - .
  gateways:
  - mesh
  hosts:
  - mysql.external
  - mysql-3.external
  tcp:
  - match:
    - port: 3306
      sourceLabels:
        app: ratings
        version: v2-mysql
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        port:
          number: 8443
        subset: v2-mysql
      weight: 100
  - match:
    - port: 3306
      sourceLabels:
        app: ratings-custom
        version: v2-mysql
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        port:
          number: 9443
        subset: v2-mysql
